Configs and websocket security update
- Created config file configs.yml
- Implemented 3 connection phases ( PRE_CRYPTO, PRE_SAID, OPERATIONAL )
- Implemented SAID logic (Server Access ID)

--- a/configs.yml
+++ b/configs.yml
@@ -1,8 +1,8 @@
 database:
-  database_name: "PublicQuacks"
+  db_name: "PublicQuacks"
 
 logging:
-  level: "DEBUG"
+  level: "INFO"
 
 room_creation:
   allow: true # allow users to create rooms?
