Better packets errors and code structure
- implemented error(from_packet_type, error_code)
- Callback return statement as response

--- a/configs.yml
+++ b/configs.yml
@@ -2,7 +2,7 @@ database:
   db_name: "PublicQuacks"
 
 logging:
-  level: "INFO"
+  level: "DEBUG"
 
 room_creation:
   allow: true # allow users to create rooms?
