--- a/configs.yml
+++ b/configs.yml
@@ -10,6 +10,7 @@ logging:
 
 room_creation:
   allow: true # allow users to create rooms?
+  force_ephemeral: false # if true every user-room will be deleted when all users left
 
   ratelimit:
     # Each user can create a room every 5 seconds
